# langfarm-tracing

./: .env.local.template  .gitignore  DEVELOPER.md  Dockerfile  LICENSE  README.md  docker-compose-bigdata.yml  docker-compose-flink-sql-client.yml  docker-compose-kafka.yml  docker-compose-langfarm-tracing.yml  docker-compose-langfuse.yml  docker-compose-paimon-flink.yml  docker-compose-starrocks.yml  logging.yaml  logging_dev.yaml  main.py  ping_db.py  post_langfuse_traces_with_langfarm.py  pyproject.toml  run-server.sh  start-tests.sh
.github/workflows/: docker-image.yml
docker/: .env  docker-compose-flink-sql-client.yml  docker-compose-only-infra.yml  docker-compose-paimon-flink.yml  docker-compose-starrocks.yml  docker-compose-with-infra.yml  docker-compose.yml  entrypoint.sh
docker/paimon-flink/: Dockerfile
docs/: create-catalog.md
langfarm_tracing/api/: main.py
langfarm_tracing/auth/: key.py
langfarm_tracing/core/: __init__.py  config.py  db.py  kafka.py  redis.py  tools.py
langfarm_tracing/crud/: events.py  langfuse.py  streaming.py
langfarm_tracing/schema/: __init__.py  langfuse.py
scripts/: create-tables-in-paimon.sh  kafka-observations-to-paimon.sh  kafka-traces-to-paimon.sh  restart-kafka-observations-to-paimon.sh  restart-kafka-traces-to-paimon.sh  start-docker-compose-bigdata.sh
scripts/catalog-store/: langfarm-local.yaml  langfarm-minio.yaml
tests/: base.py  test_auth_key.py  test_events_dispose.py  test_get_body_id_in_redis.py  test_kafka.py  test_llm_usage_cost.py  test_sqlalchemy_crud.py  test_uuid.py
(+18 files in other folders)
